modified the html page and began working on the box method for the homepage. still figuring out css grid

--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <div class="navbar_container">
             <!--Logo-->
-            <div class="navbar_img-container">
+            <div class="navbar_img">
                 <!--image-->
             </div>
             <div class="navbar_toggle" id="mobile-menu">
@@ -45,9 +45,29 @@
     <!--Hero Section-->
     <div class="main">
         <div class="main_container">
-            <div class="main_content">
                 <!--Main stuff-->
-            </div>
+                <div class="upper-main_container">
+                    <div class="item">
+
+                    </div>
+                </div>
+                <div class="lower-main_container">
+                    <div class="item item-1">
+                        <a href="/stylists.html"></a>
+                            Stylists
+                        </a>
+                    </div>
+                    <div class="item item-2">
+                        <a href="/stylists.html"></a>
+                            Services
+                        </a>
+                    </div>
+                    <div class="item item-3">
+                        <a href="aboutus.html"></a>
+                            Our Mission Statement
+                        </a>
+                    </div>
+                </div>
         </div>
     </div>
 
