updated css and html to create a general layout for the homepage not reponsive yet and I am looking into css bootstrap carosel

--- a/homepage.html
+++ b/homepage.html
@@ -47,7 +47,7 @@
         <div class="main_container">
                 <!--Main stuff-->
                 <div class="upper-main_container">
-                    <div class="item">
+                    <div class="big">
 
                     </div>
                 </div>
@@ -65,6 +65,12 @@
                     <div class="item item-3">
                         <a href="aboutus.html"></a>
                             Our Mission Statement
+                        </a>
+                    </div>
+
+                    <div class="item item-4">
+                        <a href="aboutus.html"></a>
+                            Products
                         </a>
                     </div>
                 </div>
