set a general layout for aboutus, stylist, and individual stylist pages as well as updated the css

--- a/stylists.html
+++ b/stylists.html
@@ -1,1 +1,89 @@
 <!--Stylist Profiles will be fully shown of this page-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Nellie House</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!--Navbar with links to the subpages-->
+    <nav class="navbar">
+        <div class="navbar_container">
+            <!--Logo-->
+            <div class="navbar_img">
+                <!--image-->
+            </div>
+            <div class="navbar_toggle" id="mobile-menu">
+                <span class="bar"></span><span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <ul class="navbar_menu">
+                <li class="navbar_item">
+                    <a href="/homepage.html" class="navbar_links">
+                        Home
+                    </a>
+                </li>
+                <li class="navbar_item"></li>
+                    <a href="/stylists.html" class="navbar_links">
+                        Stylists
+                    </a>
+                </li>
+                <li class="navbar_item"></li>
+                    <a href="/comingsoon.html" class="navbar_links">
+                        Coming Soon
+                    </a>
+                </li>
+                <li class="navbar_item"></li>
+                    <a href="/aboutus.html" class="navbar_links">
+                        About Us
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!--Hero Section-->
+    <div class="stylist">
+        <div class="stylist_container">
+                <!--Main stuff-->
+                <div class="stylist-item stylist1">
+                    <a href="">John Doe</a>
+                </div>
+                <div class="stylist-item stylist2">
+                    <a href="">Mark Shorter</a>
+                </div>
+                <div class="stylist-item stylist3">
+                    <a href="">Nicholas Amberalert</a>
+                </div>
+                <div class="stylist-item stylist4">
+                    <a href="">Blake Megatron</a>
+                </div>
+                <div class="stylist-item stylist5">
+                    <a href="">Jane Doe</a>
+                </div>
+                <div class="stylist-item stylist6">
+                    <a href="">Mark Twain</a>
+                </div>
+        </div>
+    </div>
+
+    <!--Footer Section-->
+    <footer class="footer">
+        <div class="footer_container">
+
+
+
+
+            <ul class="footer_menu">
+                <li class="footer_item">
+                    <a href="/aboutus.html" class="footer_links">
+                        About Us
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+    <script src="app.js"></script>
+</body>
+</html>
