--- a/danelle.html
+++ b/danelle.html
@@ -1,6 +1,4 @@
-<!--Information about Nellie(Cornelia Cole Fairbanks, 26th vice president's wife under the presidency of McKinley)
-House and Womens Suffrage-->
-
+<!--My Idea is to have a link to each stylist's own bio/headshot/links to schedule-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -46,20 +44,14 @@ House and Womens Suffrage-->
         </div>
     </nav>
     <!--Hero Section-->
-    <div class="aboutus">
-        <div class="aboutus_container">
-            <!--Image Text link to socials?-->
-            <h1>About The Owner</h1>
-            <p>My husband, Keith and I purchased the property in June 2024. I was doing hair there for 7 years prior to that. I fell in love with the property and the history of the house had always intrigued me. We decided that The Nellie House  would be an appropriate name to honor  Cornelia “Nellie” Cole Fairbanks, who was born there. 
-                Our hope is to create a space in this charming, downtown neighborhood that serves as a retreat from our busy daily lives. In addition to our Salon services, we offer wellness therapies to support our health.
-            </p>
-            <img src="images\CorneliaFairbanks.jpeg" alt="pic" id="aboutus_img1">
-            <h1>About The Property</h1>
-            <p>
-                Cornelia “Nellie” Fairbanks was the wife of Charles W. Fairbanks, the 26th Vice President of the United States. She was born at 230 South Main Street, Marysville, OH in 1848. Her father was involved with the underground railroad in Ohio, making the Nellie House a historical stop. Cornelia graduated from East Union School and Ohio Wesleyan Female College in 1872. After marrying Charles the two moved to the growing city of Indianapolis where she organized the first all-women's literary club in Indianapolis in 1885. The family of seven moved to Washington D.C in 1896 when Charles was elected a U.S. Senator. In 1901, Cornelia won the Daughters of the American Revolution President General election, pushing the women’s suffrage movement forward. 
-            </p>
+
+    <div class="bio">
+        <div class="bio_container">
+            <!--put the info in here for the stylists-->
         </div>
     </div>
+
+
 
     <!--Footer Section-->
     <footer class="footer">
