--- a/homepage.html
+++ b/homepage.html
@@ -53,25 +53,25 @@
                 </div>
                 <div class="lower-main_container">
                     <div class="item item-1">
-                        <a href="/stylists.html"></a>
-                            Stylists
-                        </a>
+                        <h1>View Our Stylists</h1>
+                        <p>Some text that attracts the attention of readers</p>
+                        <a href="/stylists.html">Learn More</a>
                     </div>
                     <div class="item item-2">
-                        <a href="/stylists.html"></a>
-                            Services
-                        </a>
+                        <h1>Veiw our Services</h1>
+                        <p>Another block of text that looks interesting</p>
+                        <a href="/stylists.html">Learn More</a> <!--Maybe a link to a collective portfolio or images of the studio?-->
                     </div>
                     <div class="item item-3">
-                        <a href="aboutus.html"></a>
-                            Our Mission Statement
-                        </a>
+                        <h1>Our Mission Statement</h1>
+                        <p>Learn the history of The Nellie House</p>
+                        <a href="/aboutus.html">Our Mission Statement</a>
                     </div>
-
+                        <!--Placeholder for now-->
                     <div class="item item-4">
-                        <a href="aboutus.html"></a>
-                            Products
-                        </a>
+                        <h1></h1>
+                        <p></p>
+                        <a href="/comingsoon.html">Products</a>
                     </div>
                 </div>
         </div>
@@ -80,17 +80,9 @@
     <!--Footer Section-->
     <footer class="footer">
         <div class="footer_container">
-
-
-
-
-            <ul class="footer_menu">
-                <li class="footer_item">
-                    <a href="/aboutus.html" class="footer_links">
-                        About Us
-                    </a>
-                </li>
-            </ul>
+            <a href="/aboutus.html" class="footer_links">About Us</a>
+            <a href="/homepage.html">Home</a>
+            <a href="https://www.facebook.com/profile.php?id=61564347112530">Facebook</a>
         </div>
     </footer>
     <script src="app.js"></script>
