--- a/stylists.html
+++ b/stylists.html
@@ -48,19 +48,21 @@
         <div class="stylist_container">
                 <!--Main stuff-->
                 <div class="stylist-item stylist1">
-                    <a href="">John Doe</a>
+                    <a href="/danelle.html">
+                        <img src="/images/danelle_turnock.jpg" alt="pic">
+                    </a>
                 </div>
                 <div class="stylist-item stylist2">
-                    <a href="">Mark Shorter</a>
+                    <a href="/ava.html">Ava Goertz</a>
                 </div>
                 <div class="stylist-item stylist3">
-                    <a href="">Nicholas Amberalert</a>
+                    <a href="/diana.html">Diana Jamenez</a>
                 </div>
                 <div class="stylist-item stylist4">
-                    <a href="">Blake Megatron</a>
+                    <a href="/sandy.html">Sandy Brown</a>
                 </div>
                 <div class="stylist-item stylist5">
-                    <a href="">Jane Doe</a>
+                    <a href="/tami.html">Tami Pfarr</a>
                 </div>
                 <div class="stylist-item stylist6">
                     <a href="">Mark Twain</a>
