added a header tag to the stylist cards

--- a/stylists.html
+++ b/stylists.html
@@ -48,23 +48,34 @@
         <div class="stylist_container">
                 <!--Main stuff-->
                 <div class="stylist-item stylist1">
+                    <h1>Danelle Turnock</h1>
                     <a href="/danelle.html">
                         <img src="/images/danelle_turnock.jpg" alt="pic">
                     </a>
                 </div>
                 <div class="stylist-item stylist2">
-                    <a href="/ava.html">Ava Goertz</a>
+                    <h1>Ava Goertz</h1>
+                    <a href="/ava.html">
+                        <img src="/images/ava_goertz.jpg" alt="pic">
+                    </a>
                 </div>
                 <div class="stylist-item stylist3">
+                    <h1>Diana Jamenez</h1>
                     <a href="/diana.html">Diana Jamenez</a>
                 </div>
                 <div class="stylist-item stylist4">
+                    <h1>Sandy Brown</h1>
                     <a href="/sandy.html">Sandy Brown</a>
                 </div>
                 <div class="stylist-item stylist5">
-                    <a href="/tami.html">Tami Pfarr</a>
+                    <h1>Tami Pfarr</h1>
+                    <a href="/tami.html">
+                        <img src="images/tami.jpeg" alt="">
+                    </a>
                 </div>
+                
                 <div class="stylist-item stylist6">
+                    <h1>Mark Twain</h1>
                     <a href="">Mark Twain</a>
                 </div>
         </div>
