major updates to css and html. need to make the paragraph and header tags look good in responsive mode

--- a/ava.html
+++ b/ava.html
@@ -49,7 +49,7 @@
         <div class="bio_container">
             <!--put the info in here for the stylists-->
             <h1>Ava Goertz</h1>
-            <img src="images/ava_goertz.jpg" alt="pic" id="ava_img">
+            <img src="images/ava_goertz.jpg" alt="pic" id="stylist_img">
             <div class="bio_text"><p>
                 <strong>Where did you grow up?</strong> <br>Marysville, Ohio. <br><br>
                 <strong>How long have you been doing hair?</strong> <br> I graduated from the Salon Institute of Columbus in April of 2024 with an Advanced Cosmetology license. <br><br>
