--- a/homepage.html
+++ b/homepage.html
@@ -48,30 +48,24 @@
                 <!--Main stuff-->
                 <div class="upper-main_container">
                     <div class="big">
-
+                        <img src="/images/salon_placeholder.jpg" alt="pic" class="salon">
                     </div>
                 </div>
                 <div class="lower-main_container">
                     <div class="item item-1">
                         <h1>View Our Stylists</h1>
-                        <p>Some text that attracts the attention of readers</p>
+                        <p>Click "View Our Stylists" above to learn more about our talented and hard working stylists here at The Nellie House!</p>
                         <a href="/stylists.html">Learn More</a>
                     </div>
                     <div class="item item-2">
                         <h1>Veiw our Services</h1>
-                        <p>Another block of text that looks interesting</p>
+                        <p>Click "View Our Services" above to learn more about the types and prices of services we offer here at the Nellie House!</p>
                         <a href="/stylists.html">Learn More</a> <!--Maybe a link to a collective portfolio or images of the studio?-->
                     </div>
                     <div class="item item-3">
                         <h1>Our Mission Statement</h1>
-                        <p>Learn the history of The Nellie House</p>
+                        <p>Click "Our Mission Statement" about to learn the history of The Nellie House!</p>
                         <a href="/aboutus.html">Our Mission Statement</a>
-                    </div>
-                        <!--Placeholder for now-->
-                    <div class="item item-4">
-                        <h1></h1>
-                        <p></p>
-                        <a href="/comingsoon.html">Products</a>
                     </div>
                 </div>
         </div>
