--- a/danelle.html
+++ b/danelle.html
@@ -49,7 +49,7 @@
         <div class="bio_container">
             <!--put the info in here for the stylists-->
             <h1>Danelle Turnock</h1>
-            <img src="/images/danelle_turnock.jpg" alt="pic" id="danelle_img">
+            <img src="/images/danelle_turnock.jpg" alt="pic" id="stylist_img">
             <div class="bio_text">
                 <p> <strong>Where did you grow up?</strong>  <br>  Marysville, Ohio. <br> <br>
 
