--- a/diana.html
+++ b/diana.html
@@ -49,7 +49,7 @@
         <div class="bio_container">
             <!--put the info in here for the stylists-->
             <h1>Diana Jamenez</h1>
-            <img src="" alt="pic" id="diana_img">
+            <img src="" alt="pic" id="stylist_img">
             <div class="bio_text">
                 <p> 
                     <strong>Where did you grow up?</strong> <br> I grew up in Marysville! I went to MHS and graduated 2020. <br><br> 
