--- a/tami.html
+++ b/tami.html
@@ -49,7 +49,7 @@
         <div class="bio_container">
             <!--put the info in here for the stylists-->
             <h1>Tami Pfarr</h1>
-            <img src="/images/tami.jpeg" alt="pic" id="tami_img">
+            <img src="/images/tami.jpeg" alt="pic" id="stylist_img">
             <div class="bio_text">
                 <p> <strong>Where did you grow up?</strong>  <br>  I grew up in the country on the outskirts of Marysville. <br> <br>
 
