Added immages sent by the client and made it more reponsive

--- a/comingsoon.html
+++ b/comingsoon.html
@@ -1,1 +1,75 @@
 <!--A page to show what the costomer can expect soon-->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Nellie House</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!--Navbar with links to the subpages-->
+    <nav class="navbar">
+        <div class="navbar_container">
+            <!--Logo-->
+            <div class="navbar_img">
+                <!--image-->
+            </div>
+            <div class="navbar_toggle" id="mobile-menu">
+                <span class="bar"></span><span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <ul class="navbar_menu">
+                <li class="navbar_item">
+                    <a href="/homepage.html" class="navbar_links">
+                        Home
+                    </a>
+                </li>
+                <li class="navbar_item"></li>
+                    <a href="/stylists.html" class="navbar_links">
+                        Stylists
+                    </a>
+                </li>
+                <li class="navbar_item"></li>
+                    <a href="/comingsoon.html" class="navbar_links">
+                        Coming Soon
+                    </a>
+                </li>
+                <li class="navbar_item"></li>
+                    <a href="/aboutus.html" class="navbar_links">
+                        About Us
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!--Hero Section-->
+    <div class="comingsoon">
+        <div class="comingsoon_container">
+            <!--Picture of sauna and talks about when stuff should be here-->
+            <h1>About The Property</h1>
+            <img src="images/sauna.jpeg" alt="pic" id="comingsoon_img1">
+            <p>
+                Cornelia “Nellie” Fairbanks was the wife of Charles W. Fairbanks, the 26th Vice President of the United States. She was born at 230 South Main Street, Marysville, OH in 1848. Her father was involved with the underground railroad in Ohio, making the Nellie House a historical stop. Cornelia graduated from East Union School and Ohio Wesleyan Female College in 1872. After marrying Charles the two moved to the growing city of Indianapolis where she organized the first all-women's literary club in Indianapolis in 1885. The family of seven moved to Washington D.C in 1896 when Charles was elected a U.S. Senator. In 1901, Cornelia won the Daughters of the American Revolution President General election, pushing the women’s suffrage movement forward. 
+            </p>
+            <h1>About The Owner</h1>
+            <p>My husband, Keith and I purchased the property in June 2024. I was doing hair there for 7 years prior to that. I fell in love with the property and the history of the house had always intrigued me. We decided that The Nellie House  would be an appropriate name to honor  Cornelia “Nellie” Cole Fairbanks, who was born there. 
+                Our hope is to create a space in this charming, downtown neighborhood that serves as a retreat from our busy daily lives. In addition to our Salon services, we offer wellness therapies to support our health.
+            </p>
+            
+            
+        </div>
+    </div>
+
+    <!--Footer Section-->
+    <footer class="footer">
+        <div class="footer_container">
+            <a href="/aboutus.html" class="footer_links">About Us</a>
+            <a href="/homepage.html">Home</a>
+            <a href="https://www.facebook.com/profile.php?id=61564347112530">Facebook</a>
+        </div>
+    </footer>
+    <script src="app.js"></script>
+</body>
+</html>
