--- a/homepage.html
+++ b/homepage.html
@@ -48,7 +48,7 @@
                 <!--Main stuff-->
                 <div class="upper-main_container">
                     <div class="big">
-                        <img src="/images/salon_placeholder.jpg" alt="pic" class="salon">
+                        <img src="/images/chair.jpeg" alt="pic" class="salon">
                     </div>
                 </div>
                 <div class="lower-main_container">
