Added sauna image, added sauna and wellness therapy information, made more pages responsive, changed the name of sauna.html to wellness.html. made all the navbars and footers uniform

--- a/diana.html
+++ b/diana.html
@@ -12,6 +12,7 @@
     <nav class="navbar">
         <div class="navbar_container">
             <!--Logo-->
+            <a href="/homepage.html"><img src="/images/logo.png" alt="logo" class="navbar_logo"></a>
             <div class="navbar_img">
                 <!--image-->
             </div>
@@ -31,8 +32,8 @@
                     </a>
                 </li>
                 <li class="navbar_item"></li>
-                    <a href="/comingsoon.html" class="navbar_links">
-                        Coming Soon
+                    <a href="/wellness.html" class="navbar_links">
+                        Wellness
                     </a>
                 </li>
                 <li class="navbar_item"></li>
@@ -74,17 +75,9 @@
     <!--Footer Section-->
     <footer class="footer">
         <div class="footer_container">
-
-
-
-
-            <ul class="footer_menu">
-                <li class="footer_item">
-                    <a href="/aboutus.html" class="footer_links">
-                        About Us
-                    </a>
-                </li>
-            </ul>
+            <a href="/homepage.html" class="footer_links">Home</a>
+            <a href="/aboutus.html" class="footer_links">About Us</a>
+            <a href="https://www.facebook.com/profile.php?id=61564347112530" class="footer_links">Facebook</a>
         </div>
     </footer>
     <script src="app.js"></script>
