--- a/tami.html
+++ b/tami.html
@@ -12,6 +12,7 @@
     <nav class="navbar">
         <div class="navbar_container">
             <!--Logo-->
+            <a href="/homepage.html"><img src="/images/logo.png" alt="logo" class="navbar_logo"></a>
             <div class="navbar_img">
                 <!--image-->
             </div>
@@ -31,8 +32,8 @@
                     </a>
                 </li>
                 <li class="navbar_item"></li>
-                    <a href="/comingsoon.html" class="navbar_links">
-                        Coming Soon
+                    <a href="/wellness.html" class="navbar_links">
+                        Wellness
                     </a>
                 </li>
                 <li class="navbar_item"></li>
@@ -53,9 +54,9 @@
             <div class="bio_text">
                 <p> <strong>Where did you grow up?</strong>  <br>  I grew up in the country on the outskirts of Marysville. <br> <br>
 
-                    <strong>How long have you been doing hair?</strong>  <br> 45 years….34 yrs. at Designs Unlimited, aka “The Nellie House”!❤️<br>
+                    <strong>How long have you been doing hair?</strong>  <br> 45 years….34 yrs. at Designs Unlimited, aka “The Nellie House”!<br> <br>
                     
-                    <strong>What inspires you?</strong>   I love music and being outside in nature. <br> <br>
+                    <strong>What inspires you?</strong> <br>  I love music and being outside in nature. <br> <br>
                     
                     <strong>Where are your favorite pastimes outside of work?</strong>  <br>
                     My favorite things to do when I’m not working are hanging out with my husband, my grands, my friends, & all of our critters!
@@ -78,17 +79,9 @@
     <!--Footer Section-->
     <footer class="footer">
         <div class="footer_container">
-
-
-
-
-            <ul class="footer_menu">
-                <li class="footer_item">
-                    <a href="/aboutus.html" class="footer_links">
-                        About Us
-                    </a>
-                </li>
-            </ul>
+            <a href="/homepage.html" class="footer_links">Home</a>
+            <a href="/aboutus.html" class="footer_links">About Us</a>
+            <a href="https://www.facebook.com/profile.php?id=61564347112530" class="footer_links">Facebook</a>
         </div>
     </footer>
     <script src="app.js"></script>
