--- a/danelle.html
+++ b/danelle.html
@@ -12,6 +12,7 @@
     <nav class="navbar">
         <div class="navbar_container">
             <!--Logo-->
+            <a href="/homepage.html"><img src="/images/logo.png" alt="logo" class="navbar_logo"></a>
             <div class="navbar_img">
                 <!--image-->
             </div>
@@ -31,8 +32,8 @@
                     </a>
                 </li>
                 <li class="navbar_item"></li>
-                    <a href="/comingsoon.html" class="navbar_links">
-                        Coming Soon
+                    <a href="/wellness.html" class="navbar_links">
+                        Wellness
                     </a>
                 </li>
                 <li class="navbar_item"></li>
@@ -53,9 +54,9 @@
             <div class="bio_text">
                 <p> <strong>Where did you grow up?</strong>  <br>  Marysville, Ohio. <br> <br>
 
-                    <strong>How long have you been doing hair?</strong>  <br> 24 years.<br>
+                    <strong>How long have you been doing hair?</strong>  <br> 24 years.<br> <br>
                     
-                    <strong>What inspires you?</strong> I’m inspired by nature, beauty, learning how to support our health naturally, and anything that nudges my creativity. <br> <br>
+                    <strong>What inspires you?</strong> <br> I’m inspired by nature, beauty, learning how to support our health naturally, and anything that nudges my creativity. <br> <br>
                     
                     <strong>Where are your favorite pastimes outside of work?</strong>  <br>
                     I’m  a little bit of a homebody, and love being in my garden. I’ve usually got 2 or 3  redecorating or home updating projects going on. I enjoy  quality time with my husband, our two dogs, cat, our families, and our friends. I love cooking and finding new ways to make a delicious and nourishing meal!  <br> <br>
@@ -74,17 +75,9 @@
     <!--Footer Section-->
     <footer class="footer">
         <div class="footer_container">
-
-
-
-
-            <ul class="footer_menu">
-                <li class="footer_item">
-                    <a href="/aboutus.html" class="footer_links">
-                        About Us
-                    </a>
-                </li>
-            </ul>
+            <a href="/homepage.html" class="footer_links">Home</a>
+            <a href="/aboutus.html" class="footer_links">About Us</a>
+            <a href="https://www.facebook.com/profile.php?id=61564347112530" class="footer_links">Facebook</a>
         </div>
     </footer>
     <script src="app.js"></script>
