--- a/homepage.html
+++ b/homepage.html
@@ -11,6 +11,7 @@
     <nav class="navbar">
         <div class="navbar_container">
             <!--Logo-->
+            <a href="/homepage.html"><img src="/images/logo.png" alt="logo" class="navbar_logo"></a>
             <div class="navbar_img">
                 <!--image-->
             </div>
@@ -30,8 +31,8 @@
                     </a>
                 </li>
                 <li class="navbar_item"></li>
-                    <a href="/comingsoon.html" class="navbar_links">
-                        Coming Soon
+                    <a href="/wellness.html" class="navbar_links">
+                        Wellness
                     </a>
                 </li>
                 <li class="navbar_item"></li>
@@ -58,9 +59,9 @@
                         <a href="/stylists.html">Learn More</a>
                     </div>
                     <div class="item item-2">
-                        <h1>Veiw our Services</h1>
+                        <h1>View our Services</h1>
                         <p>Click "View Our Services" above to learn more about the types and prices of services we offer here at the Nellie House!</p>
-                        <a href="/stylists.html">Learn More</a> <!--Maybe a link to a collective portfolio or images of the studio?-->
+                        <a href="/wellness.html">Learn More</a> <!--Maybe a link to a collective portfolio or images of the studio?-->
                     </div>
                     <div class="item item-3">
                         <h1>Our Mission Statement</h1>
@@ -74,9 +75,9 @@
     <!--Footer Section-->
     <footer class="footer">
         <div class="footer_container">
+            <a href="/homepage.html" class="footer_links">Home</a>
             <a href="/aboutus.html" class="footer_links">About Us</a>
-            <a href="/homepage.html">Home</a>
-            <a href="https://www.facebook.com/profile.php?id=61564347112530">Facebook</a>
+            <a href="https://www.facebook.com/profile.php?id=61564347112530" class="footer_links">Facebook</a>
         </div>
     </footer>
     <script src="app.js"></script>
