--- a/stylists.html
+++ b/stylists.html
@@ -12,6 +12,7 @@
     <nav class="navbar">
         <div class="navbar_container">
             <!--Logo-->
+            <a href="/homepage.html"><img src="/images/logo.png" alt="logo" class="navbar_logo"></a>
             <div class="navbar_img">
                 <!--image-->
             </div>
@@ -31,8 +32,8 @@
                     </a>
                 </li>
                 <li class="navbar_item"></li>
-                    <a href="/comingsoon.html" class="navbar_links">
-                        Coming Soon
+                    <a href="/wellness.html" class="navbar_links">
+                        Wellness
                     </a>
                 </li>
                 <li class="navbar_item"></li>
@@ -81,8 +82,8 @@
                 
                 <div class="stylist-item stylist6">
                     
-                    <a href="">Another Stylist?</a>
-                    <h1>Another Stylist</h1>
+                    <a href="https://www.google.com/maps/place/The+Nellie+House/@40.2343662,-83.3694888,17z/data=!4m7!3m6!1s0x8838c507389f8f25:0xaaeccc336b75725d!8m2!3d40.2343621!4d-83.3669139!15sCiB0aGUgbmVsbGllIGhvdXNlIG1hcnlzdmlsbGUgb2hpb5IBDGJlYXV0eV9zYWxvbuABAA!16s%2Fg%2F11y66fkd6w?entry=tts&g_ep=EgoyMDI0MTExMy4xIPu8ASoJLDEwMjExMjMzSAFQAw%3D%3D">Find us at 230 South Main Street, Marysville, OH</a>
+                    <h1>Our Location</h1>
                 </div>
         </div>
     </div>
@@ -90,9 +91,9 @@
     <!--Footer Section-->
     <footer class="footer">
         <div class="footer_container">
+            <a href="/homepage.html" class="footer_links">Home</a>
             <a href="/aboutus.html" class="footer_links">About Us</a>
-            <a href="/homepage.html">Home</a>
-            <a href="https://www.facebook.com/profile.php?id=61564347112530">Facebook</a>
+            <a href="https://www.facebook.com/profile.php?id=61564347112530" class="footer_links">Facebook</a>
         </div>
     </footer>
     <script src="app.js"></script>
