added some final images, increased responsiveness by a ton. maybe pushing to live soon

--- a/danelle.html
+++ b/danelle.html
@@ -64,7 +64,7 @@
                     <strong>What do you love most about your job?</strong>  <br>
                     No two days are ever the same in this line of work. It allows me to be creative, and provides me with a sense of purpose and drive to be better. The connections that I have made with our clients is so fulfilling, it makes it hard to call it a job!  <br> <br>
     
-                    <strong>How do I book with you?</strong> <br>  <br><br>
+                    <strong>How do I book with you?</strong> <br> You can find my services and book with me at this <a href="https://squareup.com/appointments/book/FRAQ948JRPE6M">link</a> <br><br>
                     </p>
             </div>
         </div>
