--- a/wellness.html
+++ b/wellness.html
@@ -47,13 +47,13 @@
     </nav>
     <!--Hero Section-->
     <div class="comingsoon">
-        <h1 id="sauna" >Wellness Therparies</h1>
+        <h1 id="sauna" >Wellness Therapies</h1>
         <div class="comingsoon_container">
             
             <img src="images/sauna.jpeg" alt="pic" id="comingsoon_img1" href="https://www.vagaro.com/thenelliehouse">
             <h1>HaloSauna</h1>
             <p>
-                Engage all 5 senses for a truly transformative experience. TASTE the salty air, SMELL the essential oil, custom blended for our HaloIR TM customers, FEEL the warmth of the infrared heat as it envelops your body, HEAR the soothing voice of KSARA professional guided meditation, and SEE the changing lights of the medical
+                Engage all 5 senses for a truly transformative experience. TASTE the salty air, SMELL the essential oil custom blended for our HaloIR TM customers, FEEL the warmth of the infrared heat as it envelops your body, HEAR the soothing voice of KSARA professional guided meditation, and SEE the changing lights of the medical
 grade chromotherapy light waves.
                 Come relax in the HaloSauna, an experience than offers the synergistic combination of inferred sauna and dry salt therapy created to engage all 5 senses for a truly transformative experience. <br>
                 Experience benefits such as improved respitory wellness, immune system resilience, detoxification, muscle relaxtion, stress relief, and relief of skin conditions.
@@ -62,7 +62,7 @@ grade chromotherapy light waves.
             <p>Dry salt therapy is breathing in micro-sized salt particles immediately transported to every part of the respiratory tract. Salt molecules dissolve and attract small impurities, helping inflammation in the airways and on the skin. Salth therapy will promote a healthy respiratory environment, reduce illnesses, allergies, bronchitis, asthma and skin conditions. Chronic issues will benefit from 3-4 times/week and then tapering off to weekly sessions.</p>
             <h1>Red Light Therapy</h1>
             <p>Red light therapy is thought to work by acting on the “power house” in your body’s cells called mitochondria. With more energy, other cells can do their work more efficiently, such as repairing skin, boosting new cell growth, and enhancing skin rejuvenation. More specifically, certain cells absorb light wavelengths and are stimulated to work.
-                Red Light Therapy combines powerful red light and near-infrared wavelengths to offer you an effective theraputic experience proven to reduce ocidative stress and stimulating the production of ATP (Adenosin Triphosphate) through a process known as biomodulation. <br>
+                Red Light Therapy combines powerful red light and near-infrared wavelengths to offer you an effective theraputic experience proven to reduce oxidative stress and stimulating the production of ATP (Adenosin Triphosphate) through a process known as biomodulation. <br>
             Other benefits include reduction of chronic and acute pain, skin rejuvination through collagen and elastin production. reduces inflammation, helps boosts immune system, improves sleep, enhances brain function, and boosts testosterone production <br>
             </p>
             <a href="https://www.vagaro.com/thenelliehouse">Sauna Booking Link</a>
