--- a/homepage.html
+++ b/homepage.html
@@ -55,18 +55,15 @@
                 <div class="lower-main_container">
                     <div class="item item-1">
                         <h1>View Our Stylists</h1>
-                        <p>Click "View Our Stylists" above to learn more about our talented and hard working stylists here at The Nellie House!</p>
-                        <a href="/stylists.html">Learn More</a>
+                        <p>To view our stylists to book an appointment <a href="/stylists.html">Click Here</a></p>
                     </div>
                     <div class="item item-2">
-                        <h1>View our Services</h1>
-                        <p>Click "View Our Services" above to learn more about the types and prices of services we offer here at the Nellie House!</p>
-                        <a href="/wellness.html">Learn More</a> <!--Maybe a link to a collective portfolio or images of the studio?-->
+                        <h1>View Our Therapies</h1>
+                        <p>To see our Wellness Therapies <a href="/wellness.html">Click Here</a></p> <!--Maybe a link to a collective portfolio or images of the studio?-->
                     </div>
                     <div class="item item-3">
                         <h1>Our Mission Statement</h1>
-                        <p>Click "Our Mission Statement" about to learn the history of The Nellie House!</p>
-                        <a href="/aboutus.html">Our Mission Statement</a>
+                        <p>To see our mission statement <a href="/aboutus.html">Click Here</a></p>
                     </div>
                 </div>
         </div>
