--- a/sandy.html
+++ b/sandy.html
@@ -50,7 +50,7 @@
         <div class="bio_container">
             <!--put the info in here for the stylists-->
             <h1>Sandy Brown</h1>
-            <img src="" alt="pic" id="stylist_img">
+            <img src="/images/sandy.jpeg" alt="pic" id="stylist_img">
             <div class="bio_text">
                 <p>
                     <strong>Where did you grow up?</strong> <br>Washington Court House, Ohio <br><br>
