Changed all instances of homepage to index

--- a/danelle.html
+++ b/danelle.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="navbar_container">
             <!--Logo-->
-            <a href="/homepage.html"><img src="/images/logo.png" alt="logo" class="navbar_logo"></a>
+            <a href="/index.html"><img src="/images/logo.png" alt="logo" class="navbar_logo"></a>
             <div class="navbar_img">
                 <!--image-->
             </div>
@@ -22,7 +22,7 @@
             </div>
             <ul class="navbar_menu">
                 <li class="navbar_item">
-                    <a href="/homepage.html" class="navbar_links">
+                    <a href="/index.html" class="navbar_links">
                         Home
                     </a>
                 </li>
@@ -75,7 +75,7 @@
     <!--Footer Section-->
     <footer class="footer">
         <div class="footer_container">
-            <a href="/homepage.html" class="footer_links">Home</a>
+            <a href="/index.html" class="footer_links">Home</a>
             <a href="/aboutus.html" class="footer_links">About Us</a>
             <a href="https://www.facebook.com/profile.php?id=61564347112530" class="footer_links">Facebook</a>
         </div>
